Signed-off-by: Juan Iscar <juan.iscar@exponentiateam.com>

--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -8,6 +8,8 @@
     "edit": "Editar",
     "delete": "Eliminar",
     "confirm": "Confirmar",
+    "confirm_action": "Confirmar Acción",
+    "yes_confirm": "Sí, confirmar",
     "yes": "Sí",
     "no": "No",
     "actions": "Acciones",
