--- a/public/lang/va.json
+++ b/public/lang/va.json
@@ -8,6 +8,8 @@
     "edit": "Editar",
     "delete": "Eliminar",
     "confirm": "Confirmar",
+    "confirm_action": "Confirmar Acció",
+    "yes_confirm": "Sí, confirmar",
     "yes": "Sí",
     "no": "No",
     "actions": "Accions",
